--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Messages</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile_label">Profile</string>
+    <string name="conversations_label">Conversations</string>
+    <string name="friends_label">Friends</string>
 </resources>
