--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="profile_label">Profile</string>
     <string name="conversations_label">Conversations</string>
     <string name="friends_label">Friends</string>
+    <string name="new_conversation_label">New Conversation</string>
 </resources>
