--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="friends_label">Friends</string>
     <string name="new_conversation_label">New Conversation</string>
     <string name="new_friend_label">new friend</string>
+    <string name="invite_label">Invite</string>
 </resources>
